--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/cssinjs": "^1.20.0",
     "@ant-design/icons": "^5.3.7",
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@prisma/client": "^5.14.0",
     "antd": "^5.17.4",
     "next": "14.2.3",
     "react": "^18",
@@ -25,6 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
