FEAT: adds all the user login logic, searching for data and if everything is ok, go to the next screen

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@prisma/client": "^5.14.0",
     "antd": "^5.17.4",
+    "jose": "^5.4.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
